# pydantic_json_patch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cosmic-ray.toml  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: push.yml
src/pydantic_json_patch/: __init__.py  models.py
tests/: app.py  test_fastapi_app.py  test_models.py  test_package_setup.py
