[project]
name = "pydantic_json_patch"
version = "0.0.0"
description = "Pydantic models for implementing JSON Patch."
readme = "README.md"
authors = [
    { name = "Jonathan Sharpe", email = "mail@jonrshar.pe" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.15.0",
]
license = "ISC"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Typing :: Typed",
]

[project.urls]
repository = "https://github.com/textbook/pydantic_json_patch"
Issues = "https://github.com/textbook/pydantic_json_patch/issues"
Sponsor = "https://ko-fi.com/textbook"

[build-system]
requires = ["uv_build>=0.9.27,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "fastapi>=0.128.2",
    "fastapi-cli>=0.0.20",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.coverage.run]
omit = ["tests/**"]

[tool.coverage.lcov]
output = "coverage/lcov.info"

[tool.pytest.ini_options]
python_classes = []  # avoid trying to run TestOp as a test
