[project]
name = "pydantic_json_patch"
version = "0.0.0"
description = "Pydantic models for implementing JSON Patch."
readme = "README.md"
authors = [
    { name = "Jonathan Sharpe", email = "mail@jonrshar.pe" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12",
    "typing-extensions>=4.14.1",
]
license = "ISC"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Typing :: Typed",
]

[project.urls]
repository = "https://github.com/textbook/pydantic_json_patch"
Issues = "https://github.com/textbook/pydantic_json_patch/issues"
Sponsor = "https://ko-fi.com/textbook"

[build-system]
requires = ["uv_build>=0.9.27,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    {include-group = "mutation"},
    "coverage>=7.13.3",
    "fastapi>=0.128.2",
    "fastapi-cli>=0.0.20",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "joythief>=0.8.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
mutation = [
    "cosmic-ray>=8.4.3",
    "pytest-ty>=0.1.4",
    "tqdm>=4.67.3",
]

[tool.coverage.run]
omit = ["tests/**"]

[tool.coverage.html]
directory = "coverage/html/"

[tool.coverage.lcov]
output = "coverage/lcov.info"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-glob=*.md"  # validate README examples
python_classes = []  # avoid trying to run TestOp as a test

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
    "D105",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN201",
    "ANN401",
    "C408",
    "D",
    "PLR2004",
    "S101",
]
"bin/**/*.py" = [
    "D",
]
